<resources>
    <string name="app_name">FAST</string>
    <string name="textview">TextView</string>
    <string name="title_activity_start_screen">StartScreen</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="backgroundColor">Background</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="emailR">Email</string>
    <string name="register">Register</string>
    <string name="weight">Weight</string>
    <string name="phone_number">Phone Number</string>
    <string name="i_verify_that_i_am_above_16_years_of_age">I verify that I am above 16 years of age.</string>
    <string name="passwordR">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="registerS">Register</string>
    <string name="fast">FAST</string>
    <string name="slogan">Never worry about keeping track of fasting, this app does it for you.</string>
    <string name="register_new_account">Register new account</string>
    <string name="log_out">Log Out</string>
    <string name="open"></string>
    <string name="close"></string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="start_btn">Start Now</string>
    <string name="stop_btn">Finish</string>
    <string name="sign_out">Sign Out</string>
    <string name="dashboard">Dashboard</string>
    <string name="fasting_tips_for_you">Fasting Tips For You!</string>
    <string name="stay_hydrated_drink_plenty_of_water">- STAY HYDRATED! Drink plenty of water</string>
    <string name="keep_fasting_periods_short">- Keep Fasting Periods Short</string>
    <string name="_5_2_pattern_restrict_your_calorie_intake_for_two_days_per_week_500_calories_per_day_for_women_and_600_for_men"><![CDATA[--> 5:2 Pattern : Restrict your calorie intake for two days per week (500 calories per day for women and 600 for men)]]></string>
    <string name="_16_8_pattern_this_pattern_involves_only_consuming_food_in_an_eight_hour_window_and_fasting_for_16_hours_a_day_every_day_of_the_week"><![CDATA[--> 16:8 Pattern : This pattern involves only consuming food in an eight-hour window and fasting for 16 hours a day, every day of the week.]]></string>
    <string name="to_avoid_tendency_to_eat_keep_busy_by_doing_activities">- To avoid tendency to eat, keep busy by doing activities</string>
    <string name="eat_enough_protein">- Eat enough protein</string>
    <string name="todo">TODO</string>
</resources>
