<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#211D44"
    android:orientation="vertical"
    android:id="@+id/dl">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_google_signin_btn_text_dark_focused"
        tools:context=".HomePage">

    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:background="#FFFFFF"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tips_heading"
            android:layout_width="230dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/fasting_tips_for_you"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.039" />

        <TextView
            android:id="@+id/tip1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="20dp"
            android:text="@string/stay_hydrated_drink_plenty_of_water"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tip2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.973" />

        <TextView
            android:id="@+id/tip2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="20dp"
            android:text="@string/keep_fasting_periods_short"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tip2a"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.975" />

        <TextView
            android:id="@+id/tip3"
            android:layout_width="395dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="352dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="20dp"
            android:text="@string/to_avoid_tendency_to_eat_keep_busy_by_doing_activities"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tip4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tip2a"
            android:layout_width="395dp"
            android:layout_height="65dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="20dp"
            android:text="@string/_5_2_pattern_restrict_your_calorie_intake_for_two_days_per_week_500_calories_per_day_for_women_and_600_for_men"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tip2b"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tip2b"
            android:layout_width="395dp"
            android:layout_height="65dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="240dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="20dp"
            android:text="@string/_16_8_pattern_this_pattern_involves_only_consuming_food_in_an_eight_hour_window_and_fasting_for_16_hours_a_day_every_day_of_the_week"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tip3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tips_heading"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tip4"
            android:layout_width="395dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="416dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="20dp"
            android:text="@string/eat_enough_protein"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/lightBulb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/lightBulb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="25dp"
            android:background="#FFFFFF"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/lightbulb" />

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu">

        <Button
            android:id="@+id/signOut"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="650dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_out"/>

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>