<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#211D44"
    android:orientation="vertical"
    android:id="@+id/dl">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_google_signin_btn_text_dark_focused"
        tools:context=".HomePage">

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_google_signin_btn_text_dark_focused"
        tools:context=".HomePage" >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#211D44">

            <ImageView
                android:id="@+id/bgcircle"
                android:layout_width="319dp"
                android:layout_height="297dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="75dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bgcircle" />

            <ImageView
                android:id="@+id/icanchor"
                android:layout_width="599dp"
                android:layout_height="453dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icanchor" />

            <Chronometer
                android:id="@+id/timer"
                android:layout_width="237dp"
                android:layout_height="109dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:textSize="65sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bgcircle" />

            <Button
                android:id="@+id/btnstart"
                android:layout_width="235dp"
                android:layout_height="47dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/bgbtngreen"
                android:text="@string/start_btn"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:typeface="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.512"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timer" />


            <Button
                android:id="@+id/btnstop"
                android:layout_width="235dp"
                android:layout_height="47dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/bgbtnred"
                android:text="@string/stop_btn"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#AF3555"
                android:textSize="20sp"
                android:typeface="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.512"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnstart"
                app:layout_constraintVertical_bias="0.545" />

            <TextView
                android:id="@+id/displayName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:textColor="#3195D6"
                android:textSize="26sp"
                app:layout_constraintBottom_toTopOf="@+id/bgcircle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/icanchor" />


        </android.support.constraint.ConstraintLayout>
    </RelativeLayout>



    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu">

        <Button
            android:id="@+id/signOut"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="650dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_out" />
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>